--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -43,6 +43,7 @@
       }
     </style>
     <script src="home-nav.js" type = "module" defer></script>
+    <script src="/components/TopButton/TopButton.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 시작 -->
@@ -132,6 +133,7 @@
     </div>
       <!-- 배너 슬라이드 끝 -->
     
+      <btn-top></btn-top>
       <!-- 메인페이지 시작 -->
       <section class="section">
         <div class="subsection">
